# crosslens-specs

./: .gitignore  README.md  SPEC-001 产品定义与边界 v0.4.md  SPEC-001 产品定义与边界.md  SPEC-002 目标用户与核心场景.md  SPEC-003 Agentic投研工作流架构 v0.2.md  SPEC-003 Agentic投研工作流架构 v0.3.1.md  SPEC-003 Agentic投研工作流架构 v0.3.2.md  SPEC-003 Agentic投研工作流架构 v0.3.3.md  SPEC-003 Agentic投研工作流架构 v0.3.4.md  SPEC-003 Agentic投研工作流架构 v0.3.md  SPEC-004 五类分析能力域与 Analysis Card Schema v0.2.3.md  SPEC-004 五类分析能力域与 Analysis Card Schema v0.2.4.md  SPEC-004 五类分析能力域与 Analysis Card Schema v0.2.5.md  SPEC-004 五类分析能力域与 Analysis Card Schema v0.2.6.md  SPEC-004 五类分析能力域与 Analysis Card Schema v0.2.7.md  SPEC-004 五类分析能力域与 Analysis Card Schema v0.2.md  SPEC-005 Capability Package 与 Metric Registry 规范 v0.2.md  SPEC-005 Capability Package 与 Metric Registry 规范.md  SPEC-006 CHANGELOG.md  SPEC-006 Investment Playbook 规范 v0.1.1.md  SPEC-006 Investment Playbook 规范 v0.2.0.md  SPEC-006 Investment Playbook 规范 v0.2.1 Patch.md  SPEC-006 Investment Playbook 规范 v0.2.1.md  SPEC-006 Investment Playbook 规范 v0.2.2.md  SPEC-006 Investment Playbook 规范 v0.2.3.md  SPEC-006 Investment Playbook 规范 v0.2.4.md  SPEC-006 Investment Playbook 规范 v0.2.5.md  SPEC-006 Investment Playbook 规范 v0.2.6.md  SPEC-006 Investment Playbook 规范 v0.2.7.md  SPEC-006 Investment Playbook 规范 v0.2.8.md  SPEC-006 Investment Playbook 规范 v0.3.0.md  SPEC-006-CHANGELOG.md  SPEC-007 Orchestration 与执行路径 v0.6.md  SPEC-007 Orchestration 与执行路径.md  SPEC-008 Decision Trace 与 Observability v0.1.md  SPEC-008 Decision Trace 与 Observability v0.2.md  SPEC-008 Decision Trace 与 Observability.md  SPEC-009 Governance Guardrails Evaluator 与人工介入 v0.1.md  SPEC-009 Governance Guardrails Evaluator 与人工介入.md  (+19 more)
executable_specs/spec003/: README.md  pyproject.toml
executable_specs/spec003/schemas/: spec003-analysis_domain_job.schema.json  spec003-asset_info.schema.json  spec003-conflict_report.schema.json  spec003-context_bundle.schema.json  spec003-context_source.schema.json  spec003-decision_candidate.schema.json  spec003-evidence_packet.schema.json  spec003-investment_task.schema.json  spec003-post_card_validation_report.schema.json
executable_specs/spec003/scripts/: export_schema.py
executable_specs/spec003/tests/: test_models.py  test_uri_resolver.py
executable_specs/spec004/: README.md  pyproject.toml
executable_specs/spec004/schemas/: spec004-analysis_card.schema.json  spec004-constraint_export.schema.json  spec004-data_freshness.schema.json
executable_specs/spec004/scripts/: export_schema.py
executable_specs/spec004/tests/: test_models.py
executable_specs/spec005/: README.md  pyproject.toml
executable_specs/spec006/: CHANGELOG.md  README.md  pyproject.toml
executable_specs/spec009/: README.md  pyproject.toml
(+42 files in other folders)
