[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "crosslens-spec005"
version = "0.1.0"
description = "Executable Metric Registry validation contracts for crosslens SPEC-005"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.12,<3"]

[project.optional-dependencies]
test = ["pytest>=9,<10"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]
