[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "crosslens-spec006"
version = "0.3.0"
description = "Executable decision semantics and contracts for crosslens SPEC-006"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.12,<3"]

[project.optional-dependencies]
test = ["pytest>=9,<10"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]
