[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "crosslens-spec009"
version = "0.1.0"
description = "Executable governance contracts for crosslens SPEC-009"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.12,<3"]

[project.optional-dependencies]
test = ["pytest>=9,<10"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]
